[gd_scene load_steps=4 format=3 uid="uid://dahe2ld028258"]

[ext_resource type="Script" path="res://UI/Scripts/ShopBackButton.gd" id="1_w7hri"]
[ext_resource type="Texture2D" uid="uid://db60w81j6iiko" path="res://icon.svg" id="2_2y62m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ps7s2"]
size = Vector2(124, 124)

[node name="ShopBackButton" type="Node2D"]
script = ExtResource("1_w7hri")

[node name="ShopBackButtonSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2y62m")

[node name="ShopBackButtonArea" type="Area2D" parent="."]

[node name="ShopBackButtonShape" type="CollisionShape2D" parent="ShopBackButtonArea"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_ps7s2")

[connection signal="input_event" from="ShopBackButtonArea" to="." method="_on_shop_back_button_area_input_event"]
[connection signal="mouse_entered" from="ShopBackButtonArea" to="." method="_on_shop_back_button_area_mouse_entered"]
[connection signal="mouse_exited" from="ShopBackButtonArea" to="." method="_on_shop_back_button_area_mouse_exited"]
